--- a/about.html
+++ b/about.html
@@ -19,26 +19,26 @@
  <!--/radix_placeholder_import_source-->
 
   <!--radix_placeholder_meta_tags-->
-  <title>Graphics principles: Untitled</title>
+  <title>Graphics principles: Effective visual communication</title>
   
   
   
   
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="Graphics principles: Untitled"/>
+  <meta property="og:title" content="Graphics principles: Effective visual communication"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="Graphics principles"/>
   
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="Graphics principles: Untitled"/>
+  <meta property="twitter:title" content="Graphics principles: Effective visual communication"/>
   
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{},"value":[]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","site"]}},"value":[{"type":"character","attributes":{},"value":["Effective visual communication"]},{"type":"character","attributes":{},"value":["radix::radix_website"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -1254,6 +1254,10 @@
   </script>
   
   <!--/radix_placeholder_distill-->
+  <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+  <script src="site_libs/bowser-1.9.3/bowser.min.js"></script>
+  <script src="site_libs/webcomponents-2.0.0/webcomponents.js"></script>
+  <script src="site_libs/distill-2.2.21/template.v2.js"></script>
   <!--radix_placeholder_site_in_header-->
   <!--/radix_placeholder_site_in_header-->
 
@@ -1265,7 +1269,7 @@
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"Untitled","authors":[]}
+{"title":"Effective visual communication","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -1291,13 +1295,15 @@
 <!--/radix_placeholder_site_before_body-->
 
 <div class="d-title">
-<h1>README.utf8.md</h1>
+<h1>Effective visual communication</h1>
 
 </div>
 
 
 <div class="d-article">
-<h2 id="effective-visual-communication">Effective visual communication</h2>
+<p>Effective visual communication is a core competency for pharmacometricians, statisticians, and more generally any quantitative scientist. It is essential in every step of a quantitative workflow, from scoping to execution and communicating results and conclusions. With this competency, we can better understand data and influence decisions towards appropriate actions. Without it, we can fool ourselves and others and pave the way to wrong conclusions and actions. The goal of this tutorial is to convey this competency. We posit three laws of effective visual communication for the quantitative scientist: have a clear purpose, show the data clearly, and make the message obvious.</p>
+<p>A concise “Cheat Sheet”, available on <a href="https://graphicsprinciples.github.io" class="uri">https://graphicsprinciples.github.io</a>, distills more granular recommendations for everyday practical use. Finally, these laws and recommendations are illustrated in four case studies.</p>
+<p>The aim of this site is to provide both the code, data and examples as stand alone posts. A pre-print of the complete tutorial (in submission) can also be found at: <a href="https://arxiv.org/abs/1903.09512" class="uri">https://arxiv.org/abs/1903.09512</a></p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
