add three laws post

--- a/README.html
+++ b/README.html
@@ -19,20 +19,20 @@
  <!--/radix_placeholder_import_source-->
 
   <!--radix_placeholder_meta_tags-->
-  <title>Graphics principles: Untitled</title>
+  <title>Case studies: Untitled</title>
   
   
   
   
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="Graphics principles: Untitled"/>
+  <meta property="og:title" content="Case studies: Untitled"/>
   <meta property="og:type" content="article"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:site_name" content="Graphics principles"/>
+  <meta property="og:site_name" content="Case studies"/>
   
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="Graphics principles: Untitled"/>
+  <meta property="twitter:title" content="Case studies: Untitled"/>
   
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
@@ -1273,7 +1273,7 @@
 <header class="header header--fixed" role="banner">
 <nav class="radix-site-nav radix-site-header">
 <div class="nav-left">
-<a href="index.html" class="title">Graphics principles</a>
+<a href="index.html" class="title">Case studies</a>
 </div>
 <div class="nav-right">
 <a href="https://graphicsprinciples.github.io/">Home</a>
