--- a/README.html
+++ b/README.html
@@ -1279,6 +1279,7 @@
 <a href="https://graphicsprinciples.github.io/">Home</a>
 <a href="https://graphicsprinciples.github.io/tutorial.html">Tutorial</a>
 <a href="https://graphicsprinciples.github.io/tutorial-case-studies">Case studies</a>
+<a href="https://graphicsprinciples.github.io/gallery/">Gallery</a>
 <a href="https://graphicsprinciples.github.io/initiative.html">About</a>
 <a href="https://github.com/GraphicsPrinciples">
 <i class="fab fa-github"></i>
